# vsm

./: .eslintrc  .gitignore  .npmrc  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  unocss.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/tauri-plugin-sql/: Cargo.toml  package.json  tsconfig.json
crates/tauri-plugin-sql/src/: plugin.rs
scripts/: release.ts
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: BaseLayout.vue  ButtonWithTooltip.vue  Greet.vue  Header.vue  List.vue  ListItem.vue  MenuItem.vue  Meta.vue  Searchbar.vue  SideMenu.vue  StudioExtra.vue  Toolbar.vue  VCard.vue  VDialog.vue  VHeader.vue  VLayout.vue  VList.vue  VListItem.vue  VMeta.vue  VSearchbar.vue  VSideMenu.vue  VSnippetList.vue  VToolbar.vue
src/components/dialogs/: Add.vue
src/components/ui/: VButton.vue  VCard.vue  VInput.vue
src/components/ui/VGlobalDialog/: VDialog.vue  VDialogProvider.vue  useGlobalDialog.ts
src/components/views/: DashBoard.vue  Import.vue  Test.vue
src/composables/: app.ts  editor.ts  useSnippets.ts  util.ts  vscode.ts
src/hooks/: db.ts  diffEditor.ts  vscode.ts
src/routes/: index.ts
src/store/: index.ts  snippetStore.ts  vscodeStore.ts
src/styles/: index.css
src/types/: snippet.ts
src/views/: Import.vue  Settings.vue  Test.vue
test/: util.test.ts
