[package]
name = "vsm"
version = "0.0.2"
description = "A Tauri App"
authors = ["rainbowatcher <rainbow-w@qq.com>"]
edition = "2021"
rust-version = "1.68"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tauri]
version = "1.2"
features = [
  "fs-read-dir",
  "fs-read-file",
  "path-all",
  "window-start-dragging",
  "fs-write-file"
]
[dependencies.tauri-plugin-sql]
path = "../crates/tauri-plugin-sql"
features = ["sqlite"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
